--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title> Hackathon Event</title>
-    <link rel="stylesheet" href="/hackathon/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
